Fix local storage saving and collapsables-close

--- a/src/scss/layout/_collapsable.scss
+++ b/src/scss/layout/_collapsable.scss
@@ -1,12 +1,11 @@
 .collapsable--close {
   .hidden__container {
     display: none;
-    animation: intro;
   }
   .fa-leaf {
     animation: intro;
     animation-timing-function: ease;
-    animation-duration: 3s;
+    animation-duration: 1.5s;
     animation-iteration-count: 1;
   }
 }
